# bivt_labs

./: .gitignore  README.md  pyproject.toml
data/lab04/: b_file.txt
data/lab08/: students_input.json  students_output.json
data/lab09/: students.csv
data/samples/: cities.csv  labs.csv  people.csv  people.json  ports.csv  ports.json
src/: arrays.py  matrix.py  tuples.py
src/lab01/: 01_greeting.py  02_sum_avg.py  03_discount_vat.py  04_minutes_to_hhmm.py  05_initials_and_len.py  06_count.py  07_decode.py
src/lab02/: arrays.py  matrix.py  tuples.py
src/lab03/: test_text.py  text_stats.py  text_testing.py
src/lab04/: text_report.py
src/lab05/: file_converter.py
src/lab06/: cli_text.py  converter.py
src/lab07/: README.md
src/lab08/: README.md  models.py  serialize.py
src/lab09/: README.md  group.py
src/lab10/: README.md  linked_list.py  structures.py
src/lib/: csv_xlsx.py  file_lib.py  json_csv.py  rectmtrx.py  tblprint.py  test.py  text.py
tests/: group_test.py  test_converter.py  test_text.py
