[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
[project]
name = "labs"
version = "2025.11.23"
[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "black>=24.0"
]
dependencies = [
  "xlsxwriter==3.2.9",
]
[tool.black]
extend-exclude = '''
(
  ^\.(venv|env)/|
  ^data/|
  ^images/
)
'''
